--- a/leagueOfLegends/views/index.ejs
+++ b/leagueOfLegends/views/index.ejs
@@ -2,21 +2,42 @@
 <html>
     <head>
         <title>League of Legends Prototype</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     </head>
     <body>
         
-        <!-- form to enter informatio nfor API -->
-        <form action="/results" method="GET">
-            <div class="form-group">
-                <label for="summonerName">Summoner Name</label>
-                <input class="form-control" id="summonerName" name="summonerName">
-                <input type="submit" class="btn btn-primary">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="/">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="https://na.leagueoflegends.com/en/">League of Legends</a>
+              </li>
+            </ul>
+        </nav>
+        
+        <div class="jumbotron">
+            <h1 class="display-4">League of Legends</h1>
+            <p class="lead">Various searches for League of Legends</p>
+            <hr class="my-4">
+            <p>
+                Types of trackers: challenger, summoner name
+            </p>
+        </div>
+        
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Search By: Summoner Name</h5>
+                <form action="/results" method="GET">
+                    <div class="form-group">
+                        <label for="summonerName">Summoner Name:</label>
+                        <input class="form-control" id="summonerName" name="summonerName">
+                        <input type="submit" class="btn btn-primary">
+                    </div>
+                </form>
             </div>
-        </form>
+        </div>
         
     </body>
 </html>
