--- a/leagueOfLegends/views/results.ejs
+++ b/leagueOfLegends/views/results.ejs
@@ -2,28 +2,26 @@
 <html>
     <head>
         <title>testing result page</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     </head>
     
-<h1>something here! test results page!</h1>
+<h1>You searched for : <%= searchterm %></h1>
 
 <div class="container">
     <div class="row">
-        <% data.entries.forEach(summoner => { %>
-            <div class="col-md-6">
-                <div class="jumbotron">
-                    Summoner ID: <%= summoner.summonerId %>
-                    summoner Name: <%= summoner.summonerName %>
-                    League Points: <%= summoner.leaguePoints %>
-                    Rank: <%= summoner.rank %>
-                    Wins: <%= summoner.wins %>
-                    Losses: <%= summoner.losses %>
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-text">
+                        <h5>icon ID: <%= data.profileIconId %></h5>
+                        <h5>name: <%= data.name %></h5>
+                        <h5>puuid: <%= data.puuid %></h5>
+                        <h5>level: <%= data.summonerLevel %></h5>
+                        <h5>account ID: <%= data.accountId %></h5>
+                        <h5>id: <%= data.id %></h5>
+                        <h5>revision date: <%= data.revisionDate %></h5>
                 </div>
             </div>
-        <% }); %>
+        </div>
     </div>
 </div>
 
